[package]
name = "quanta-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for QuantaChain PQC wallet operations"
repository = "https://github.com/quantachain/quanta-wasm"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings
wasm-bindgen    = "0.2"
js-sys          = "0.3"
serde           = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json      = "1.0"

# Crypto — pure-Rust Falcon-512 (compiles to WASM; no C FFI).
# pqcrypto-falcon cannot target wasm32-unknown-unknown because it wraps a C
# reference implementation via the cc crate.
#
# SIGNED-MESSAGE FORMAT CONTRACT:
#   falcon-rust's sign() returns raw signature bytes only.
#   The node (pqcrypto-falcon) expects: SignedMessage = sig_bytes || msg_bytes.
#   We construct this manually in sign_transaction():
#       output = falcon_sign(hash).to_bytes() || hash_bytes   (sig || msg)
#   The node's open(SignedMessage, pk) will verify sig over msg and return msg.
#   Both libraries implement NIST Falcon-512 with the same wire encoding,
#   so the raw sig bytes are byte-for-byte compatible.
falcon-rust     = "0.1"
sha3            = "0.10"
hmac            = "0.12"
hex             = "0.4"
zeroize         = { version = "1.7", features = ["derive"] }

# BIP39 mnemonic (24-word seed phrases)
bip39           = "2.0"

# RNG — must use the "js" feature so getrandom works in WASM
getrandom       = { version = "0.2", features = ["js"] }

# Better WASM panic messages in browser console
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"   # optimise for size in WASM
lto       = true
